--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@ant-design/pro-components": "^2.4.4",
     "@umijs/max": "^4.1.10",
     "antd": "^5.4.0",
-    "echarts-for-react": "^3.0.2"
+    "echarts-for-react": "^3.0.2",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.33",
